New application page remodeled to accept themes UI 2.4